# SF311Predict

./: .replit  Sl-cheatsheet.py  api_pull_example.py  app.py  data_pipeline.py  database_cache.py  debug_historical.py  debug_mission.py  debug_neighborhoods.py  enhanced_app.py  fixed_pipeline.py  improved_data_pipeline.py  neighborhood_coalescer.py  pyproject.toml  replit.md  requirements.txt  test_coalescer.py  working_app.py
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
attached_assets/: Pasted--sf311-forecast-daily-by-neighborhood-py-Input-from-previous-step-sf311-street-sidewalk--1755543890375_1755543890375.txt  Pasted--sf311-street-sidewalk-daily-by-neighborhood-py-Output-1-sf311-street-sidewalk-daily-tidy-c-1755543820137_1755543820137.txt  Pasted-Drop-in-code-put-this-in-your-data-pull-tidy-step-import-pandas-as-pd-from-collections-import-Coun-1755550518853_1755550518854.txt  Pasted-Make-forecasts-less-weekly-flat-A-Add-short-horizon-momentum-features-break-the-fixed-point-In-1755552180458_1755552180459.txt  Pasted-Minimal-fixes-drop-in-patches-A-Let-the-trend-model-use-more-history-Use-the-last-365-days-inste-1755560050098_1755560050099.txt  Pasted-Suggested-tweaks-focused-actionable-Guard-against-mis-ordered-validation-indexing-In-backtest--1755548157355_1755548157356.txt  Pasted-You-re-storing-only-days-that-have-1-case-in-Postgres-sparse-series-In-generate-fixed-prediction-1755574348819_1755574348820.txt  (+1 more)
components/: charts.py  enhanced_charts.py  filters.py  geospatial_map.py
test/: pyproject.toml
utils/: api_client.py  cache_helpers.py  (+1 more)
(+77 files in other folders)
